# rust-contract-testing

./: .gitignore  Cargo.toml  Dockerfile  client.rest  cloudbuild.yaml  generate_html.sh  generate_report.sh  index.md  input.yaml  main.py  report.html  requirements.txt
pacts/user_test/: consumer-producer.json
pacts/users/: consumer-producer.json  consumer-provider.json
reports/: test-0.xml  test-1.xml  unit-1.xml  user_test-1.xml
src/: main.rs
template/: report_template.html
tests/: consumer_test.rs  producer_test.rs  test_runner.rs
tests/.ipynb_checkpoints/: test_runner-checkpoint.rs
tests/cloud_storage/: mod.rs
tests/idtoken/: mod.rs
tests/user_test/: mod.rs
