[package]
name = "ContractTesting"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde = {version="1.0.209", features = ["derive"] }
#axum = "0.7.5"
lazy_static = "1.5.0"
pact_consumer = "1.3.1"
serde_json = "1.0.128"
# pact = "0.2.0"
reqwest = "0.12.7"
pact_matching = "1.2.7"
pact_models = "1.2.4"
pact_verifier = "1.2.4"